Added ad for contribute to contributors.mdx

--- a/docs/docs/contributors.mdx
+++ b/docs/docs/contributors.mdx
@@ -3,17 +3,6 @@ title: Contributors
 sidebar_position: 1.2
 ---
 
-<b>Special thanks to all our contributors! Without you, MaduChat wouldn't be the same thing!🚀🎉</b>
-
-<ContributorList>
-  <Contributor name="Madu" image="https://avatars.githubusercontent.com/u/85842735" link="https://github.com/Madu-de" />
-  <Contributor name="Izaan Anwar" image="https://avatars.githubusercontent.com/u/99073963" link="https://github.com/IzaanAnwar" />
-  <Contributor name="Igor Lira" image="https://avatars.githubusercontent.com/u/56862592" link="https://github.com/Igor-Lira" />
-</ContributorList>
-
-
-
-
 export const Contributor = ({name, image, link}) => {
   return (
     <>
@@ -27,3 +16,14 @@ export const ContributorList = ({children}) => {
     <div style={{display: 'flex', gap: '20px', marginTop: '20px', alignItems: 'center', flexWrap: 'wrap'}}>{children}</div>
   );
 }
+
+<b>Special thanks to all our contributors! Without you, MaduChat wouldn't be the same thing!🚀🎉</b>
+
+<ContributorList>
+  <Contributor name="Madu" image="https://avatars.githubusercontent.com/u/85842735" link="https://github.com/Madu-de" />
+  <Contributor name="Izaan Anwar" image="https://avatars.githubusercontent.com/u/99073963" link="https://github.com/IzaanAnwar" />
+  <Contributor name="Igor Lira" image="https://avatars.githubusercontent.com/u/56862592" link="https://github.com/Igor-Lira" />
+</ContributorList>
+
+<br />
+*You want to see **your profile** in this list? Read the [How to contribute](how-to-contribute) doc, search for an interesting [issue](https://github.com/Madu-de/MaduChat/issues) and work on it!🚀 I look forward to your PR❤️*
